--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react": "19.0.0",
     "react-native": "0.79.4",
     "react-native-elements": "^3.4.3",
-    "react-native-maps": "^1.24.3",
+    "react-native-maps": "1.20.1",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
